# metavision_driver

./: .flake8.ini  .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  metavision_driver.repos  metavision_ros1_driver.rosinstall  metavision_ros2_driver.rosinstall  metavision_ros_driver.repos  metavision_ros_driver.rosinstall  nodelet_plugins.xml  package.xml
.github/docker/: Dockerfile.amd64_jammy_humble_openeb  Dockerfile.arm64v8_jammy_humble_openeb  Dockerfile.armv7_focal_noetic_metavision  Dockerfile.focal_noetic_galactic_metavision  Dockerfile.jetson_r34_noetic_metavision  README.md
.github/scripts/: build_ros1.bash  build_ros2.bash
.github/workflows/: ci.yaml  main.yaml
cfg/: MetaVisionDyn.cfg
cmake/: CMakeListsROS1.txt  CMakeListsROS2.txt  ROS1.cmake  ROS2.cmake
config/: gen41.bias  ids_xcpe.bias  trigger_pins.yaml  trigger_pins_nodelet.yaml  trigger_pins_stereo.yaml
include/metavision_driver/: bias_parameter.h  callback_handler.h  check_endian.h  driver_ros1.h  driver_ros1_base.h  driver_ros2.h  logging.h  metavision_wrapper.h  resize_hack.h  ros_time_keeper.h
include/metavision_ros_driver/: bias_parameter.h  callback_handler.h  camera_driver.h  camera_driver_ros1.h  check_endian.h  driver.h  driver_ros1.h  driver_ros1_base.h  driver_ros2.h  encoder.h  event_array_typedef.h  event_publisher.h  event_publisher_base.h  event_publisher_ros2.h  extra_field_setter.h  image_updater.h  logging.h  message_state.h  metavision_wrapper.h  recorder_ros2.h  resize_hack.h  ros1_ros2_compatibility.h  ros_time_keeper.h  sync_test_ros1.h  sync_test_ros2.h  synchronizer.h
launch/: cyclone_dds_config.xml  driver_composition.launch.py  driver_node.launch  driver_node.launch.py  driver_nodelet.launch  recorder_node.launch.py  recording_driver.launch  recording_driver.launch.py  recording_driver_separate.launch  recording_driver_separate.launch.py  recording_evk1_driver.launch  recording_evk2_driver.launch  recording_stereo_driver.launch  recording_stereo_driver.launch.py  start_recording.launch.py  stereo_driver.launch.py  stereo_driver_node.launch  stereo_with_renderer.launch.py  sync_test.launch  sync_test.launch.py
src/: bias_parameter.cpp  bias_parameter.cu  camera_driver.cpp  camera_driver_node.cpp  driver.cpp  driver_node.cpp  driver_node_ros1.cpp  driver_node_ros2.cpp  driver_node_ros2.cu  driver_nodelet.cpp  driver_nodelet_ros1.cpp  driver_ros1.cpp  driver_ros2.cpp  driver_ros2.cu  metavision_wrapper.cpp  recorder_node_ros2.cpp  recorder_ros2.cpp  start_recording.py  start_recording_ros2.py  stop_recording.py  stop_recording_ros2.py  sync_test_node_ros1.cpp  sync_test_node_ros2.cpp  sync_test_ros1.cpp  sync_test_ros2.cpp  test_time_stamps_ros1.py  test_time_stamps_ros2.py
udev/rules.d/: ca_device.rules
