<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>metavision_ros_driver</name>
  <version>1.0.0</version>
  <description>ROS1 and ROS2 drivers for the metavision based event cameras</description>
  <maintainer email="bernd.pfrommer@gmail.com">Bernd Pfrommer</maintainer>
  <license>Apache-2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- common dependencies -->
  <depend>camera_info_manager</depend>
  <depend>dvs_msgs</depend>
  <depend>prophesee_event_msgs</depend>
  <depend>event_array2_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  
  <!-- ROS1 specific dependencies -->
  <depend>dynamic_reconfigure</depend>
  <depend>nodelet</depend>

  <!-- ROS2 specific dependencies -->
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp_components</depend>
  <depend condition="$ROS_VERSION == 2">rosbag2_transport</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
    <!-- this is crucial else the package will not be registered! -->
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
